--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,11 +4,12 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
             "type": "chrome",
             "request": "launch",
             "name": "debug_js1",
-            "url": "http://127.0.0.1:5500/c05/node-value.html",
+            "url": "http://127.0.0.1:5500/c05/inner-text-and-text-content.html",
             "webRoot": "${workspaceFolder}"
         }
     ]
