--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,11 +6,12 @@
     "configurations": [
 
 
+
         {
             "type": "chrome",
             "request": "launch",
             "name": "debug_js2",
-            "url": "http://127.0.0.1:5500/c05/inner-html.html",
+            "url": "http://127.0.0.1:5500/c06/event-attributes.html",
             "webRoot": "${workspaceFolder}"
         }
     ]
